Make tests work with JRE 8